@@ -2,6 +2,7 @@
 v4.0.3-git
 ----------
 
+[jan] Fix listing alarms of recurring tasks.
 [jan] Fix default task list in portal block (Bug #12133).
 [jan] Fix displaying of due dates of recurring events in some views.
 [jan] Update broken rows due to migration bug in PostgreSQL (Bug #12101).
